fixed text alignment on loggednav component

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -163,9 +163,8 @@ form {
 .image-container {
   display: flex;
   align-items: center;
-  padding-top: 5px;
-  padding-left: 5px;
   margin-right: 10px;
+  margin-left: 10px;
   font-weight: bold;
   font-size: .85rem;
 }
@@ -197,6 +196,8 @@ form {
   display:flex;
   margin-right: 20px;
   justify-self: flex-end;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 .categories a {
   padding: 3px;
